--- a/Core/Core.vcxitems.filters
+++ b/Core/Core.vcxitems.filters
@@ -18,6 +18,9 @@
     <None Include="$(MSBuildThisFileDirectory)Configuration\Compiler.props">
       <Filter>Configuration</Filter>
     </None>
+    <None Include="$(MSBuildThisFileDirectory)Configuration\Debug.targets">
+      <Filter>Configuration</Filter>
+    </None>
     <None Include="$(MSBuildThisFileDirectory)Configuration\Default.props">
       <Filter>Configuration</Filter>
     </None>
@@ -37,12 +40,6 @@
       <Filter>Configuration</Filter>
     </None>
     <None Include="$(MSBuildThisFileDirectory)Configuration\DesignTime.props">
-      <Filter>Configuration</Filter>
-    </None>
-    <None Include="$(MSBuildThisFileDirectory)Configuration\VsCode.targets">
-      <Filter>Configuration</Filter>
-    </None>
-    <None Include="$(MSBuildThisFileDirectory)Configuration\GdbDebug.cfg">
       <Filter>Configuration</Filter>
     </None>
     <None Include="$(MSBuildThisFileDirectory)Configuration\Platform.targets">
@@ -117,7 +114,7 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)Concurrency\Signal.cpp">
       <Filter>Concurrency</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)Runtime\heap.cpp">
+    <ClCompile Include="$(MSBuildThisFileDirectory)Runtime\heap.c">
       <Filter>Runtime</Filter>
     </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)Concurrency\Scheduler.cpp">
