--- a/Default/Default.vcxitems.filters
+++ b/Default/Default.vcxitems.filters
@@ -24,17 +24,11 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)Storage\Streams\RandomAccessStream.h">
       <Filter>Storage\Streams</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)Storage\DynamicBuffer.h">
-      <Filter>Storage</Filter>
-    </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)Storage\Seekable.h">
       <Filter>Storage</Filter>
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)Storage\Buffer.h">
       <Filter>Storage</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)Collections\Container.h">
-      <Filter>Collections</Filter>
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)Property.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)DynamicHandle.h" />
@@ -50,7 +44,7 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)Collections\Vector.h">
       <Filter>Collections</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)StatusClass.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)Status.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)Storage\Volume.h">
       <Filter>Storage</Filter>
     </ClInclude>
@@ -120,6 +114,10 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)Collections\Node.h">
       <Filter>Collections</Filter>
     </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Exception.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)Storage\Encoding\Dwarf\Dwarf.h">
+      <Filter>Storage\Encoding\Dwarf</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MSBuildThisFileDirectory)StringHelper.cpp" />
@@ -128,9 +126,6 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)UnknownClass.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)Object.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)StringClass.cpp" />
-    <ClCompile Include="$(MSBuildThisFileDirectory)Storage\DynamicBuffer.cpp">
-      <Filter>Storage</Filter>
-    </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)Storage\Buffer.cpp">
       <Filter>Storage</Filter>
     </ClCompile>
@@ -161,12 +156,14 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)Storage\Streams\StreamReader.cpp">
       <Filter>Storage\Streams</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)MemoryHelper.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)Core\DispatchedHandler.cpp">
       <Filter>Core</Filter>
     </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)Collections\Node.cpp">
       <Filter>Collections</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Storage\Encoding\Dwarf\Dwarf.cpp">
+      <Filter>Storage\Encoding\Dwarf</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -184,6 +181,12 @@
     </Filter>
     <Filter Include="Core">
       <UniqueIdentifier>{bff08e3e-51aa-4b21-9a7a-07516a794c62}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Storage\Encoding">
+      <UniqueIdentifier>{0839ad31-9b52-4a75-ae7b-3f6be2828f3c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Storage\Encoding\Dwarf">
+      <UniqueIdentifier>{42658492-a0f4-43dd-8d2b-b1ba1a167023}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
