--- a/Core.Rpi5/Configuration/Compiler.props
+++ b/Core.Rpi5/Configuration/Compiler.props
@@ -2,10 +2,11 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <CompilerFlags>$(CompilerFlags) -mcpu=cortex-a76 -mlittle-endian</CompilerFlags>
-    <IncludePath>$(IncludePath);$(CompilerPath)$(CompilerName)\include\</IncludePath>
-    <IncludePath>$(IncludePath);$(CompilerPath)$(CompilerName)\include\c++\$(CompilerVersion)\</IncludePath>
-    <IncludePath>$(IncludePath);$(CompilerPath)$(CompilerName)\include\c++\$(CompilerVersion)\$(CompilerName)\</IncludePath>
-    <IncludePath>$(IncludePath);$(CompilerPath)lib\gcc\$(CompilerName)\$(CompilerVersion)\include\</IncludePath>
+    <!--<IncludePath>$(IncludePath);$(CompilerPath)$(CompilerName)\include\</IncludePath>-->
+    <!--<IncludePath>$(IncludePath);$(CompilerPath)$(CompilerName)\include\c++\$(CompilerVersion)\</IncludePath>-->
+    <!--<IncludePath>$(IncludePath);$(CompilerPath)$(CompilerName)\include\c++\$(CompilerVersion)\$(CompilerName)\</IncludePath>-->
+    <!--<IncludePath>$(IncludePath);$(CompilerPath)lib\gcc\$(CompilerName)\$(CompilerVersion)\include\</IncludePath>-->
+    <LinkerFlags>$(LinkerFlags) --no-warn-rwx-segments</LinkerFlags>
     <NMakeForcedIncludes>$(NMakeForcedIncludes);$(SolutionDir)Core.Rpi5\IntelliSense.h</NMakeForcedIncludes>
   </PropertyGroup>
 </Project>
