--- a/Core.Rpi5/Configuration/Tools.targets
+++ b/Core.Rpi5/Configuration/Tools.targets
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?> 
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
   <Target Name="InstallCompiler" Condition="!Exists('$(CompilerPath)')">
     <Message Text="Installing Compiler..." Importance="High" />
