--- a/Core.Rpi5/linker.ld.in
+++ b/Core.Rpi5/linker.ld.in
@@ -14,30 +14,25 @@ SECTIONS
 	*(.text .text.*)
 	}
 
+.eh_frame_hdr :
+	{
+	__eh_frame_hdr_start = .;
+	KEEP(*(.eh_frame_hdr .eh_frame_hdr.*))
+	}
+
 .eh_frame :
 	{
-	KEEP(*(.eh_frame*))
+	KEEP(*(.eh_frame .eh_frame.*))
 	}
 
-.data :
+.gcc_except_table :
 	{
 	KEEP(*(.gcc_except_table .gcc_except_table.*))
-	KEEP(*(.got*))
-	__init_array_start = .;
-	KEEP(*(.init_array*))
-	__init_array_end = .;
-	*(.rodata .rodata.*)
-	*(.data .data.*)
 	}
 
-.bss (NOLOAD) :
+.got :
 	{
-	. = ALIGN(8);
-	__bss_start = .;
-	*(.bss*)
-	*(COMMON)
-	. = ALIGN(8);
-	__bss_end = .;
+	KEEP(*(.got .got.*))
 	}
 
 .stack (NOLOAD) :
@@ -46,6 +41,28 @@ SECTIONS
 	__stack_start = .;
 	. += CPU_COUNT * STACK_SIZE;
 	__stack_end = .;
+	}
+
+.data :
+	{
+	__init_array_start = .;
+	KEEP(*(.init_array .init_array.*))
+	__init_array_end = .;
+	*(.rodata .rodata.*)
+	*(.data .data.*)
+	}
+
+.bss (NOLOAD) :
+	{
+	__bss_start = .;
+	*(.bss .bss.*)
+	. = ALIGN(8);
+	__bss_end = .;
+	}
+
+.nodata (NOLOAD) :
+	{
+	*(.nodata .nodata.*)
 	}
 
 __end = .;
