--- a/Default/Default.vcxitems.filters
+++ b/Default/Default.vcxitems.filters
@@ -37,9 +37,6 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)Storage\File.h">
       <Filter>Storage</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)Storage\StaticBuffer.h">
-      <Filter>Storage</Filter>
-    </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)Collections\Vector.h">
       <Filter>Collections</Filter>
     </ClInclude>
@@ -80,9 +77,6 @@
       <Filter>Collections</Filter>
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)Exception.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)Storage\Encoding\Dwarf\Dwarf.h">
-      <Filter>Storage\Encoding\Dwarf</Filter>
-    </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)Collections\cluster.hpp">
       <Filter>Collections</Filter>
     </ClInclude>
@@ -107,6 +101,9 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)Collections\shared_map.hpp">
       <Filter>Collections</Filter>
     </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Storage\Encoding\Dwarf.h">
+      <Filter>Storage\Encoding</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MSBuildThisFileDirectory)StringHelper.cpp" />
@@ -121,9 +118,6 @@
       <Filter>Storage</Filter>
     </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)Storage\File.cpp">
-      <Filter>Storage</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)Storage\StaticBuffer.cpp">
       <Filter>Storage</Filter>
     </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)Storage\Intermediate.cpp">
@@ -144,10 +138,10 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)Collections\Node.cpp">
       <Filter>Collections</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)Storage\Encoding\Dwarf\Dwarf.cpp">
-      <Filter>Storage\Encoding\Dwarf</Filter>
-    </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)MemoryHelper.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)Storage\Encoding\Dwarf.cpp">
+      <Filter>Storage\Encoding</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Storage">
@@ -161,9 +155,6 @@
     </Filter>
     <Filter Include="Storage\Encoding">
       <UniqueIdentifier>{0839ad31-9b52-4a75-ae7b-3f6be2828f3c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Storage\Encoding\Dwarf">
-      <UniqueIdentifier>{42658492-a0f4-43dd-8d2b-b1ba1a167023}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
