--- a/Core.Rpi5/Configuration/Compiler.props
+++ b/Core.Rpi5/Configuration/Compiler.props
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <CompilerFlags>$(CompilerFlags) -mcpu=cortex-a76 -mlittle-endian</CompilerFlags>
     <!--<CompilerFlags>$(CompilerFlags) -fexec-charset=ISO-8859-1</CompilerFlags>-->
-    <!--<IncludePath>$(IncludePath);$(CompilerPath)$(CompilerName)\include\</IncludePath>-->
-    <!--<IncludePath>$(IncludePath);$(CompilerPath)$(CompilerName)\include\c++\$(CompilerVersion)\</IncludePath>-->
-    <!--<IncludePath>$(IncludePath);$(CompilerPath)$(CompilerName)\include\c++\$(CompilerVersion)\$(CompilerName)\</IncludePath>-->
-    <!--<IncludePath>$(IncludePath);$(CompilerPath)lib\gcc\$(CompilerName)\$(CompilerVersion)\include\</IncludePath>-->
+    <IncludePath>$(IncludePath);$(CompilerPath)$(CompilerName)\include\</IncludePath>
+    <IncludePath>$(IncludePath);$(CompilerPath)$(CompilerName)\include\c++\$(CompilerVersion)\</IncludePath>
+    <IncludePath>$(IncludePath);$(CompilerPath)$(CompilerName)\include\c++\$(CompilerVersion)\$(CompilerName)\</IncludePath>
+    <IncludePath>$(IncludePath);$(CompilerPath)lib\gcc\$(CompilerName)\$(CompilerVersion)\include\</IncludePath>
     <LinkerFlags>$(LinkerFlags) --no-warn-rwx-segments</LinkerFlags>
     <NMakeForcedIncludes>$(NMakeForcedIncludes);$(SolutionDir)Core.Rpi5\IntelliSense.h</NMakeForcedIncludes>
   </PropertyGroup>
